# Blutonomy

./: BlueROV2 Dive Checklists for Oculus and Ping360[18005].docx  Commands-BLUEROV2.md  Commands-Simulation.md  Complications.md  Detail on Oculus data bag files  QGroundControl Issues.md  README.md  changelog.md  issues-uts.md
Commands/: Commands-BLUEROV2.md  Commands-Simulation.md
DVL Simulation/: DRtodo.md  DVLIntegrationProcess.md  DVLSimulation.md  SLAM.md  changelog.md  package.xml  readme.md  sensors.xacro
DVL Simulation/SLAM/: SLAM.md  imu_draft.cpp
DVL Simulation/SLAM/SRC/: associate_nearest.cpp  deadReckonNode.cpp  extract_uuvsim_node.cpp
DVL Simulation/SLAM/SRC/Superseded/: deadReckonNode.cpp
DVL Simulation/launch/: graph_oculus.launch  graph_uuvsim.launch
DVL Simulation/msg/: Feature.msg  deadReckoning.msg
DVL Simulation/src/: deadReckonNode.cpp
MATLAB Sonar Image Conversion/: Convert Oculus images to MPEG videos.docx  clipdata.m  compress.m  csvToImage.m  makeOculusData.m  oculus.mpg.avi  oculusReadBinaryData.m  oculusReadBinaryData1.m  slice2sector.m  sonar2movie.m  testReadBinary.m  writeSonarPng.m
Superseded/slam_thesis/gtsam_testing/: 3DLandmarkTrial.cpp  CMakeLists.txt  GeometricTransforms.cpp  GeometricTransforms.hpp  LandmarkFactor.hpp  Makefile  OdometryExample.cpp  deadReckonNode2DReduction
Superseded/slam_thesis/oculus-m1200d/: CMakeLists.txt  blueprint_subsea_oculus_driverConfig.cmake.in  blueprint_subsea_oculus_driverConfigVersion.cmake.in  readme.md
Superseded/slam_thesis/oculus-m1200d/app/: raw_oculus_test.cpp
Superseded/slam_thesis/oculus-m1200d/docs/: Doxyfile.in
Superseded/slam_thesis/oculus-m1200d/include/blueprint_subsea_oculus_driver/: OculusDriver.hpp
Superseded/slam_thesis/oculus-m1200d/src/: OculusDriver.cpp
Superseded/slam_thesis/oculus_node/: README.md  config.json  package.xml
Superseded/slam_thesis/oculus_node/include/: oculusInterface.hpp
Superseded/slam_thesis/oculus_node/src/: oculus_node.cpp
Superseded/slam_thesis/slam/: CMakeLists.txt  readme.md
Superseded/slam_thesis/slam/include/slam/: associate_jcbb.hpp  associate_nearest.hpp  extract.hpp  graph.hpp
Superseded/slam_thesis/slam/launch/: experimental.launch  extract_oculus.launch  extract_uuvsim.launch  simulation.launch
Superseded/slam_thesis/slam/msg/: FeatureSet.msg  SlamResult.msg
Superseded/slam_thesis/slam/rviz/: bluerov2_experimental.rviz  bluerov2_simulated.rviz
Superseded/slam_thesis/slam/src/: extract.cpp  graph_node.cpp
bluerov2/bluerov2_description/urdf/: sensors.xacro
gtsam_testing/: CMakeCache.txt  README.md  SemiParametricLandmark.hpp  cmake_install.cmake  gtsam_testing  log.txt  runTests
gtsam_testing/test/: tests.cpp
oculus-m1200d/: CMakeLists.txt  blueprint_subsea_oculus_driverConfig.cmake.in  blueprint_subsea_oculus_driverConfigVersion.cmake.in
oculus-m1200d/app/: raw_oculus_test.cpp
oculus-m1200d/docs/: Doxyfile.in
oculus-m1200d/include/blueprint_subsea_oculus_driver/: OculusDriver.hpp
oculus-m1200d/src/: OculusDriver.cpp
oculus_node/: CMakeLists.txt  OculusHeader.saved  OculusHeaderRule.bmr  config.json
oculus_node/msg/: OculusHeader.msg
slam/: readme.md
slam/include/slam/: associate.hpp  slam_geometry.hpp
slam/launch/: graph_oculus.launch  graph_uuvsim.launch
slam/src/: associate_jcbb.cpp  deadReckonNode.cpp  extract_oculus_node.cpp  graph.cpp  slam_geometry.cpp
subscribers/: data_sub.cpp  dvl_pub.cpp  dvl_sub.cpp
